feat: convenience method for read-only calls. tests for ethereum signature check